# pigeon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  environment.yml  pigeonXT_Example.ipynb  pigeonXT_Examples.ipynb  pyproject.toml  requirements.txt  setup.py
assets/: pigeonTitle.key
examples/: back_button.ipynb
pigeon/: __init__.py  __version__.py  annotate.py
pigeonML/: annotate.py
pigeonXT/: __init__.py  __version__.py  analyse.py  analysis.py  annotate.py
pigeonXT-jupyter/: __version__.py  analyse.py
pigeonXT_jupyter/: __version__.py
