[tool.poetry]
name = "pigeonXT-jupyter"
version = "0.7.2"
description = "Quickly annotate data in Jupyter notebooks."
authors = ["Dennis Bakhuis <pypi@bakhuis.nu>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/dennisbakhuis/pigeonXT"
repository = "https://github.com/dennisbakhuis/pigeonXT"
keywords = [
  'artificial inteligence', 'labeling', 'jupyter',
  'machine learning', 'data science', 'data', 'science',
]
include = [
  "MIT",
]
packages = [{include = "pigeonXT"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
pandas = "^1.3"
jupyterlab = "^3.3"
ipywidgets = "^8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pydocstyle = "^6.2.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pydocstyle]
convention = "numpy"
